overlaping font fix

--- a/src/style/AboutMe/AboutMe.css
+++ b/src/style/AboutMe/AboutMe.css
@@ -116,10 +116,11 @@
     .aboutme-description {  
         width: 80%;
         top: 0px;
+        font-size: 15px;
     }
 
     .aboutme-left {
-
+        font-size: 13px;
         width: 80%;
     }
 }
